--- a/Console/HandsOnArrays/HandsOnArrays.vbproj
+++ b/Console/HandsOnArrays/HandsOnArrays.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{853B8D85-1607-48CB-ADA1-F387EC2DE429}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>HandsOnArrays.Module3</StartupObject>
+    <StartupObject>HandsOnArrays.Module9</StartupObject>
     <RootNamespace>HandsOnArrays</RootNamespace>
     <AssemblyName>HandsOnArrays</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -72,6 +72,12 @@
     <Compile Include="Module1.vb" />
     <Compile Include="Module2.vb" />
     <Compile Include="Module3.vb" />
+    <Compile Include="Module4.vb" />
+    <Compile Include="Module5.vb" />
+    <Compile Include="Module6.vb" />
+    <Compile Include="Module7.vb" />
+    <Compile Include="Module8.vb" />
+    <Compile Include="Module9.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
